--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,8 @@ input[type="text"], input[type="email"], input[type="password"] {
 
 .profile-form {
     max-width: 300px;
-    margin: 20px auto}
+    margin: 20px auto
+}
 
 .contact-info {
     max-width: 400px;
@@ -77,4 +78,3 @@ h3 {
     padding: 10px;
     margin: 10px;
 }
-
