--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #f4f4f4;
 }
 
 header {
-    background: #333;
-    color: #fff;
-    padding: 1rem;
+    background-color: #333;
+    color: white;
+    padding: 10px 0;
     text-align: center;
 }
 
@@ -45,4 +46,5 @@ input[type="text"] {
     text-align: left;
     display: inline-block;
     width: 300px; /* lub dowolna szerokość */
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
 }
