--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
 }
 
 header {
-    background-color: #333;
-    color: white;
-    padding: 10px 0;
+    background: #333;
+    color: #fff;
+    padding: 1rem;
     text-align: center;
 }
 
@@ -46,5 +45,4 @@ input[type="text"] {
     text-align: left;
     display: inline-block;
     width: 300px; /* lub dowolna szerokość */
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
 }
